--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-body{
+.body-main{
     font-family: 'Roboto Slab', serif;
     padding-left: 25px;
-    margin-bottom: 5%;
+    margin: 0px;
 }
 h1{
     font-size: 30px;
@@ -18,6 +18,7 @@ h1{
 .common-border{
     border-left: 5px solid #2727b6;
     border-radius: 5px;
+    margin-right: 5%;
 }
 .link-button{
     text-decoration: none;
@@ -29,6 +30,9 @@ h1{
 }
 .first-section-flexible{
     display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2%;
 }
 .first-section-half-width{
     width: 50%;
@@ -48,11 +52,47 @@ h1{
     box-shadow: 10px 10px 40px gray;
     margin-left: 2%;
     margin-right: 2%;
-    border-radius: 15px;   
+    border-radius: 15px;
+    width: 450px;
+    padding: 2%;
+      
+}
+.mission-are-box-shadow img{
+    width: 25%;
+
+}
+.box-1{
+    background: rgba(44, 133, 185, 0.3);
+    
+    
+}
+.box-2{
+    background: rgba(185, 60, 44, 0.3);
+    
+    
+}
+.box-3{
+    background: rgba(185, 183, 44, 0.3);
+    
+    
 }
 .my-projects-area{
     display: flex;
     justify-content: center;
+}
+.footer-design{
+    text-align: center;
+    background-color: black;
+    color: white;
+    padding: 0.5%;
+}
+.footer-design h1{
+    font-family: italic;
+    font-size: 40px
+    ;
+}
+.red-color{
+    color: red;
 }
 
 
