--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ h1{
     justify-content: center;
     align-items: center;
     padding: 2%;
+    margin-bottom: 2%;
 }
 .first-section-half-width{
     width: 50%;
@@ -93,6 +94,9 @@ h1{
 }
 .red-color{
     color: red;
+}
+.second-section-margin{
+    margin-bottom: 2%;
 }
 
 
